<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetFragment"
    android:orientation="vertical"
    android:paddingTop="100dp">

    <TextView
        android:id="@+id/messagesTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_name"
            android:padding="10dp"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="@string/current_phone"
            android:padding="10dp"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/current_email"
            android:padding="10dp"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_address"
            android:padding="10dp"
            android:layout_marginVertical="10dp"/>

        <CheckBox
            android:id="@+id/notificationsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enable Notifications"
            android:layout_marginVertical="10dp"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Settings"
            android:layout_marginTop="20dp"
            android:layout_marginVertical="15dp"/>

    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


</LinearLayout>