<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="back"
        android:textSize="15dp"
        android:layout_marginVertical="10dp"
        />

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/feature_1"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2021 Mazda CX-3 GS AWD"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$20,599"
        android:textSize="18sp"
        android:textColor="#003FD0" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kamloops, BC"
        android:textSize="16sp"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="350dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/car_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15dp"
            android:drawableLeft="@drawable/baseline_speed_24"

            android:text="28,390 km"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/car_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:textSize="15dp"
            android:layout_margin="2dp"
            android:drawableRight="@drawable/baseline_calendar_today_24"
            android:text="2021"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_mileage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="0"/>

        <TextView
            android:id="@+id/car_transmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15dp"
            android:drawableLeft="@drawable/baseline_directions_car_24"
            android:text="Automatic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_mileage"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="1"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/car_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:text="Gasoline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_mileage"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1"
            android:layout_margin="2dp"
            android:drawableRight="@drawable/baseline_ev_station_24"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#003FD0"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/car_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:textSize="14sp"
            android:overScrollMode="ifContentScrolls"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verified"
        android:textSize="20dp"
        android:textColor="#003FD0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verified_text"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        />

    </LinearLayout>
    </LinearLayout>
</ScrollView>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:gravity="center">
        <Button
            android:id="@+id/contactBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contact"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:textColor="@color/black"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/purchaseBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/purchase"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:textColor="@color/black"
            android:textSize="15dp"
            />

    </LinearLayout>


</LinearLayout>